--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -9,7 +9,6 @@
       <th>time</th>
       <th>loginPerson</th>
       <th>date</th>
-      <th>map</th>
     </tr>
     </thead>
     <tbody>
@@ -19,8 +18,8 @@
       <td>{{ res.time }}</td>
       <td>{{ res.loginPerson }}</td>
       <td>{{ res.date }}</td>
-      <td>{{ res.map }}</td>
       <td><button class="btn btn-danger" (click)="delete(res)"> Delete result</button></td>
+      <td><button class="btn btn-danger" (click)="getResultsByPersonLogin(res)"> Get results</button></td>
     </tr>
     </tbody>
   </table>
