--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -1,6 +1,7 @@
 <div class="col-md-6">
-  <h2> Results Details</h2>
-
+  <h2> Results</h2>
+  <td><button class="btn btn-danger" [routerLink]="['/home/', login]"> Home page</button></td>
+  <td><button class="btn btn-danger" [routerLink]="['']"> Log out</button></td>
   <table class="table table-striped">
     <thead>
     <tr>
@@ -9,10 +10,11 @@
     </tr>
     </thead>
     <tbody>
-    <tr *ngFor="let res of results" [routerLink]="['/detail', res.idResult]">
+    <tr *ngFor="let res of results" >
       <td>{{ res.idResult }}</td>
       <td>{{ res.loginPerson }}</td>
       <td><button class="btn btn-danger" (click)="delete(res)"> Delete result</button></td>
+      <td><button class="btn btn-danger" [routerLink]="['/detail', res.idResult]"> Get details</button></td>
     </tr>
     </tbody>
   </table>
