--- a/src/app/create-result/create-result.component.html
+++ b/src/app/create-result/create-result.component.html
@@ -1,5 +1,6 @@
 <div class="col-md-6">
   <h2 class="text-center">Add Result</h2>
+
   <form>
 
 
@@ -25,5 +26,6 @@
     </div>
 
     <button class="btn btn-success" (click)="create()">Create</button>
+    <button class="btn btn-success" (click)="goBack()">Back</button>
   </form>
 </div>
