--- a/src/app/person-details/person-details.component.html
+++ b/src/app/person-details/person-details.component.html
@@ -1,8 +1,23 @@
 <div *ngIf="person">
+  <td><button class="btn btn-danger" [routerLink]="['']"> Log out</button></td>
+  <button class="btn btn-success" (click)="goBack()">Back</button>
   <h4>{{person.name}} details!</h4>
   <div>
-    <label>pesel: </label>{{person.pesel}}
+    <label>Surname: </label>{{person.surname}}
   </div>
-
-  <button (click)="goBack()">Back</button>
+  <div>
+    <label>Login: </label>{{person.login}}
+  </div>
+  <div>
+    <label>Sex: </label>{{person.sex}}
+  </div>
+  <div>
+    <label>Age: </label>{{person.age}}
+  </div>
+  <div>
+    <label>Height: </label>{{person.height}}
+  </div>
+  <div>
+    <label>Weight: </label>{{person.weight}}
+  </div>
 </div>
