--- a/src/app/result-details/result-details.component.html
+++ b/src/app/result-details/result-details.component.html
@@ -1,4 +1,6 @@
 <div *ngIf="result">
+  <td><button class="btn btn-danger" [routerLink]="['']"> Log out</button></td>
+  <button class="btn btn-success" (click)="goBack()">Back</button>
   <h4>{{result.idResult}} details!</h4>
   <div>
     <label>Person login: </label>{{result.loginPerson}}
