Registration and charts.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,14 @@
 <div class="container-fluid">
-  <div class="col-md-offset-1">
+ <!-- <div class="col-md-offset-1">
     <h1>{{ title }}</h1>
   </div>
+
 
   <a routerLink="/people"> List People</a>
   <a style="margin-left:10px" routerLink="/add">Add Person</a>
   <a style="margin-left:10px" routerLink="/results"> List Results</a>
   <a style="margin-left:10px" routerLink="/addRes">Add Result</a>
-  <br/>
-
+  <br/>-->
+  <a routerLink=""></a>
   <router-outlet></router-outlet>
 </div>
