--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -19,7 +19,7 @@ body{
   bottom: -40px;
   width: auto;
   height: auto;
-  background-image: url(http://ginva.com/wp-content/uploads/2012/07/city-skyline-wallpapers-008.jpg);
+  background-image: url(http://cdn2.coachmag.co.uk/sites/coachmag/files/styles/16x9_746/public/mf-178118.jpg?itok=V6JhLOUC&timestamp=1386767177);
   background-size: cover;
   -webkit-filter: blur(5px);
   z-index: 0;
