--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div >
+
 <div class="container-fluid">
   <div class="col-md-offset-1">
     <h1>
@@ -8,9 +8,10 @@
   </div >
   <td><button class="btn btn-danger" [routerLink]="['']"> Log out</button></td>
   <td><button class="btn btn-danger" [routerLink]="['/profDet/', login]"> Your profile</button></td>
+  <td><button class="btn btn-danger" [routerLink]="['/charts/', login]"> Your statistics</button></td>
   <a *ngIf="login" style="margin-left:10px" [routerLink]="['/results/', login]"> List Results</a>
   <a style="margin-left:10px" routerLink="/addRes">Add Result</a>
 
   <br/>
 </div>
-</div>
+
