--- a/src/app/create-result/create-result.component.html
+++ b/src/app/create-result/create-result.component.html
@@ -1,33 +1,37 @@
+<div class="body"></div>
+<div class="grad"></div>
+<div class="header">
+    <div class="col-md-3">
+      <h2 class="text-center">Add Result</h2>
 
-<div class="col-md-6">
-  <h2 class="text-center">Add Result</h2>
-
-  <form>
+      <form>
 
 
-    <div class="form-group">
-      <label for="kcal"> Kcal:</label>
-      <input [(ngModel)]="result.kcal" placeholder="Kcal" name="kcal" class="form-control" id="kcal">
+        <div class="form-group">
+          <label for="kcal"> Kcal:</label>
+          <input [(ngModel)]="result.kcal" placeholder="Kcal" name="kcal" class="form-control" id="kcal">
+        </div>
+        <br>
+        <div class="form-group">
+          <label for="length">Length:</label>
+          <input [(ngModel)]="result.length" placeholder="Length" name="length" class="form-control" id="length">
+        </div>
+        <div class="form-group">
+        <label for="time">Time:</label>
+        <input [(ngModel)]="result.time" placeholder="Time" name="time" class="form-control" id="time">
+        </div>
+        <div class="form-group">
+          <label for="loginPerson">LoginPerson:</label>
+          <input type="loginPerson" [(ngModel)]="result.loginPerson" placeholder="LoginPerson" name="loginPerson" class="form-control" id="loginPerson">
+        </div>
+        <div class="form-group">
+          <label for="date">Date:</label>
+          <input [(ngModel)]="result.date" placeholder="Date" name="date" class="form-control" id="date">
+        </div>
+
+        <button class="btn btn-success" (click)="create()">Create</button>
+        <button class="btn btn-success" (click)="goBack()">Back</button>
+      </form>
+
     </div>
-    <div class="form-group">
-      <label for="length">Length:</label>
-      <input [(ngModel)]="result.length" placeholder="Length" name="length" class="form-control" id="length">
-    </div>
-    <div class="form-group">
-    <label for="time">Time:</label>
-    <input [(ngModel)]="result.time" placeholder="Time" name="time" class="form-control" id="time">
-    </div>
-    <div class="form-group">
-      <label for="loginPerson">LoginPerson:</label>
-      <input type="loginPerson" [(ngModel)]="result.loginPerson" placeholder="LoginPerson" name="loginPerson" class="form-control" id="loginPerson">
-    </div>
-    <div class="form-group">
-      <label for="date">Date:</label>
-      <input [(ngModel)]="result.date" placeholder="Date" name="date" class="form-control" id="date">
-    </div>
-
-    <button class="btn btn-success" (click)="create()">Create</button>
-    <button class="btn btn-success" (click)="goBack()">Back</button>
-  </form>
-
-</div>
+  </div>
