--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -6,7 +6,7 @@
       <h2> Results</h2>
       <td><button class="btn btn-success" [routerLink]="['/home/', login]"> Home page</button></td>
       <td><button class="btn btn-success" [routerLink]="['']"> Log out</button></td>
-      <table class="table table-striped">
+      <table class="table table-hover">
         <thead>
         <tr>
           <th>Results id: </th>
