--- a/src/app/result-details/result-details.component.html
+++ b/src/app/result-details/result-details.component.html
@@ -10,7 +10,7 @@
     <label>Time: </label>{{result.time}}
   </div>
   <div>
-    <label>Length: </label>{{result.dist}}
+    <label>Length: </label>{{result.length}}
   </div>
   <div>
     <label>Kcal: </label>{{result.kcal}}
